# muchsync

./: .gitignore  COPYING  Makefile  Makefile.am  NEWS  README  autogen.sh  chan.h  chanbuf.cc  cleanup.h  configure.ac  design.txt  fdstream.cc  fdstream.h  filehash.cc  hash.cc  infinibuf.cc  infinibuf.h  maildir.cc  misc.cc  misc.h  muchsync.1.md  muchsync.c  muchsync.cc  muchsync.h  notmuch-wishlist.txt  notmuch.cc  notmuch_db.cc  notmuch_db.h  protocol.cc  spawn.cc  sql_db.cc  sql_db.h  sqlite.cc  sqlstmt.cc  sqlstmt.h  work_queue.cc  work_queue.h  xapian_sync.cc
doc/: Doxyfile
www/: .gitignore  GNUmakefile  index.md  local.css  template.html
